--- a/index.html
+++ b/index.html
@@ -14,14 +14,12 @@
     <title>@nicholasleezt</title>
 </head>
 
-<body class="d-flex justify-content-center align-items-center bg-dark">
+<body class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white">
 
-    <div class="px-3">
+    <div>
         <h1>@nicholasleezt</h1>
         <p class="lead">membaca itu jambatan ilmu</p>
-        <p class="lead"> <a href="https://youtu.be/jGBmN6-dsqw"
-                class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
-        </p>
+        <a href="https://youtu.be/jGBmN6-dsqw" class="btn btn-primary">Get Started</a>
     </div>
 
 </body>
