--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>@nicholasleezt</title>
 </head>
 
-<body class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white">
+<body class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white bg-dark">
 
     <div>
         <h1>@nicholasleezt</h1>
