--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white bg-dark">
 
-    <div>
+    <div class="text-center">
         <h1>@nicholasleezt</h1>
         <p class="lead">membaca itu jambatan ilmu</p>
         <a href="https://youtu.be/jGBmN6-dsqw" class="btn btn-primary">Get Started</a>
