--- a/index.html
+++ b/index.html
@@ -5,21 +5,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <title>@nicholasleezt</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
+
+    <link rel="stylesheet" href="css/custom.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-
-    <title>@nicholasleezt</title>
 </head>
 
-<body class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white bg-dark">
+<body>
 
-    <div class="text-center">
-        <h1>@nicholasleezt</h1>
-        <p class="lead">membaca itu jambatan ilmu</p>
-        <a href="https://youtu.be/jGBmN6-dsqw" class="btn btn-primary">Get Started</a>
+    <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white dark-mode">
+        <div class="text-center">
+            <h1>@nicholasleezt</h1>
+            <p class="lead">membaca itu jambatan ilmu</p>
+            <a href="https://youtu.be/jGBmN6-dsqw" class="btn btn-primary">Get Started</a>
+        </div>
     </div>
 
 </body>
