--- a/index.html
+++ b/index.html
@@ -21,9 +21,26 @@
 
     <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white dark-mode">
         <div class="text-center">
-            <h1>@nicholasleezt</h1>
-            <p class="lead">membaca itu jambatan ilmu</p>
-            <a href="https://youtu.be/jGBmN6-dsqw" class="btn btn-primary">Get Started</a>
+            <p class="display-2">@nicholasleezt</h1>
+            <p class="lead"><a href="https://youtu.be/jGBmN6-dsqw" class="link-light">membaca itu jambatan ilmu</a></p>
+        </div>
+        <div class="d-flex">
+            <a href="https://instagram.com/nicholasleezt" class="link-light">
+                <i class="bi-instagram mx-3" style="font-size: 2rem;">
+                </i>
+            </a>
+            <a href="https://twitter.com/nicholasleezt" class="link-light">
+                <i class="bi-twitter mx-3" style="font-size: 2rem;"></i>
+            </a>
+            <a href="https://linkedin.com/nicholasleezt" class="link-light">
+                <i class="bi-linkedin mx-3" style="font-size: 2rem;"></i>
+            </a>
+            <a href="https://vimeo.com/nicholasleezt" class="link-light">
+                <i class="bi-vimeo mx-3" style="font-size: 2rem;"></i>
+            </a>
+            <a href="https://flickr.com/nicholasleezt" class="link-light">
+                <i class="bi-camera mx-3" style="font-size: 2rem;"></i>
+            </a>
         </div>
     </div>
 
