--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <a href="https://linkedin.com/nicholasleezt" class="link-light">
                 <i class="bi-linkedin mx-3" style="font-size: 2rem;"></i>
             </a>
+            <a href="https://github.com/nicholasleezt" class="link-light">
+                <i class="bi-github mx-3" style="font-size: 2rem;"></i>
+            </a>
             <a href="https://vimeo.com/nicholasleezt" class="link-light">
                 <i class="bi-vimeo mx-3" style="font-size: 2rem;"></i>
             </a>
