--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="https://twitter.com/nicholasleezt" class="link-light">
                 <i class="bi-twitter mx-3" style="font-size: 2rem;"></i>
             </a>
-            <a href="https://linkedin.com/nicholasleezt" class="link-light">
+            <a href="https://linkedin.com/in/nicholasleezt" class="link-light">
                 <i class="bi-linkedin mx-3" style="font-size: 2rem;"></i>
             </a>
             <a href="https://github.com/nicholasleezt" class="link-light">
