--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <link rel="stylesheet" href="css/custom.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
 </head>
 
@@ -21,8 +21,8 @@
 
     <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white dark-mode">
         <div class="text-center">
-            <p class="display-2">@nicholasleezt</h1>
-            <p class="lead"><a href="https://youtu.be/jGBmN6-dsqw" class="link-light">membaca itu jambatan ilmu</a></p>
+            <p class="display-2 mb-4">@nicholasleezt</h1>
+            <p class="lead mb-4"><a href="https://youtu.be/jGBmN6-dsqw" class="link-light">membaca itu jambatan ilmu</a></p>
         </div>
         <div class="d-flex">
             <a href="https://instagram.com/nicholasleezt" class="link-light">
