--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>@nicholasleezt</title>
+    <title>Nicholas Lee</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
 
     <link rel="stylesheet" href="css/custom.css">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
 </head>
 
@@ -21,28 +21,29 @@
 
     <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white dark-mode">
         <div class="text-center">
-            <p class="display-2 mb-4">@nicholasleezt</h1>
-            <p class="lead mb-4"><a href="https://youtu.be/jGBmN6-dsqw" class="link-light">membaca itu jambatan ilmu</a></p>
+            <p class="display-2 mb-3">Nicholas Lee</h1>
+            <p class="lead mb-4"><a href="https://youtu.be/jGBmN6-dsqw" class="link-light">membaca itu jambatan ilmu</a>
+            </p>
         </div>
         <div class="d-flex">
             <a href="https://instagram.com/nicholasleezt" class="link-light">
-                <i class="bi-instagram mx-3" style="font-size: 2rem;">
+                <i class="bi bi-instagram mx-3" style="font-size: 2rem;">
                 </i>
             </a>
             <a href="https://twitter.com/nicholasleezt" class="link-light">
-                <i class="bi-twitter mx-3" style="font-size: 2rem;"></i>
+                <i class="bi bi-twitter-x mx-3" style="font-size: 2rem;"></i>
             </a>
             <a href="https://linkedin.com/in/nicholasleezt" class="link-light">
-                <i class="bi-linkedin mx-3" style="font-size: 2rem;"></i>
+                <i class="bi bi-linkedin mx-3" style="font-size: 2rem;"></i>
             </a>
             <a href="https://github.com/nicholasleezt" class="link-light">
-                <i class="bi-github mx-3" style="font-size: 2rem;"></i>
+                <i class="bi bi-github mx-3" style="font-size: 2rem;"></i>
             </a>
             <a href="https://vimeo.com/nicholasleezt" class="link-light">
-                <i class="bi-vimeo mx-3" style="font-size: 2rem;"></i>
+                <i class="bi bi-vimeo mx-3" style="font-size: 2rem;"></i>
             </a>
             <a href="https://flickr.com/nicholasleezt" class="link-light">
-                <i class="bi-camera mx-3" style="font-size: 2rem;"></i>
+                <i class="bi bi-camera mx-3" style="font-size: 2rem;"></i>
             </a>
         </div>
     </div>
