Updated index.html and favicon
- Updated Display Name Weight
- Updated Favicon to just NL

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white dark-mode">
         <div class="text-center">
-            <p class="display-2 mb-3">Nicholas Lee</h1>
+            <p class="display-2 mb-3 fw-normal">Nicholas Lee</h1>
             <p class="lead mb-4"><a href="https://youtu.be/jGBmN6-dsqw" class="link-light">membaca itu jambatan ilmu</a>
             </p>
         </div>
