Added Schedule Page

--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <a href="https://flickr.com/nicholasleezt" class="link-light">
                 <i class="bi bi-camera mx-3" style="font-size: 2rem;"></i>
             </a>
+            <a href="schedule.html" class="link-light">
+                <i class="bi bi-train-front mx-3" style="font-size: 2rem;"></i>
+            </a>
         </div>
     </div>
 
