Updated Schedule Page
- added json files
- fixed index.html
- utilized scripts.js
- functioning schedule.html

--- a/schedule.html
+++ b/schedule.html
@@ -15,16 +15,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 </head>
 
 <body>
 
     <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white dark-mode">
-        <div class="text-center">
-            <p class="display-2 mb-3 fw-normal">Schedule</h1>
-        </div>
-        <div class="d-flex">
-        </div>
+       
+            <p class="display-2 mb-3 fw-normal">Schedule</p>
+            <a id="getSchedulePCKL" class="btn btn-primary mb-3" data-bs-toggle="collapse" href="#collapsePCKL" role="button"
+                aria-expanded="false" aria-controls="collapsePCKL">
+                PC - KL
+            </a>
+            <div class="collapse" id="collapsePCKL">
+                <div id="trainInfoPCKL" class="card card-body bg-transparent">
+                </div>
+            </div>
+            <a id="getScheduleKLPC" class="btn btn-primary" data-bs-toggle="collapse" href="#collapseKLPC" role="button"
+                aria-expanded="false" aria-controls="collapseKLPC">
+                KL - PC
+            </a>
+            <div class="collapse" id="collapseKLPC">
+                <div id="trainInfoKLPC" class="card card-body bg-transparent">
+                </div>
+            </div>
+
     </div>
 
 </body>
