Updated index and schedule

--- a/index.html
+++ b/index.html
@@ -19,35 +19,50 @@
 
 <body>
 
-    <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white dark-mode">
+    <div class="d-flex flex-column vh-100 vw-100 justify-content-center align-items-center text-white dark-mode">
         <div class="text-center">
             <p class="display-2 mb-3 fw-normal">Nicholas Lee</p>
             <p class="lead mb-4"><a href="https://youtu.be/jGBmN6-dsqw" class="link-light">membaca itu jambatan ilmu</a>
             </p>
         </div>
-        <div class="d-flex">
-            <a href="https://instagram.com/nicholasleezt" class="link-light">
-                <i class="bi bi-instagram mx-3" style="font-size: 2rem;">
-                </i>
-            </a>
-            <a href="https://twitter.com/nicholasleezt" class="link-light">
-                <i class="bi bi-twitter-x mx-3" style="font-size: 2rem;"></i>
-            </a>
-            <a href="https://linkedin.com/in/nicholasleezt" class="link-light">
-                <i class="bi bi-linkedin mx-3" style="font-size: 2rem;"></i>
-            </a>
-            <a href="https://github.com/nicholasleezt" class="link-light">
-                <i class="bi bi-github mx-3" style="font-size: 2rem;"></i>
-            </a>
-            <a href="https://vimeo.com/nicholasleezt" class="link-light">
-                <i class="bi bi-vimeo mx-3" style="font-size: 2rem;"></i>
-            </a>
-            <a href="https://flickr.com/nicholasleezt" class="link-light">
-                <i class="bi bi-camera mx-3" style="font-size: 2rem;"></i>
-            </a>
-            <a href="schedule.html" class="link-light">
-                <i class="bi bi-train-front mx-3" style="font-size: 2rem;"></i>
-            </a>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-auto mx-1 my-1">
+                    <a href="https://instagram.com/nicholasleezt" class="link-light" aria-label="Instagram">
+                        <i class="bi bi-instagram icon-size"></i>
+                    </a>
+                </div>
+                <div class="col-auto mx-1 my-1">
+                    <a href="https://twitter.com/nicholasleezt" class="link-light" aria-label="Twitter">
+                        <i class="bi bi-twitter-x icon-size"></i>
+                    </a>
+                </div>
+                <div class="col-auto mx-1 my-1">
+                    <a href="https://linkedin.com/in/nicholasleezt" class="link-light" aria-label="LinkedIn">
+                        <i class="bi bi-linkedin icon-size"></i>
+                    </a>
+                </div>
+                <div class="col-auto mx-1 my-1">
+                    <a href="https://github.com/nicholasleezt" class="link-light" aria-label="GitHub">
+                        <i class="bi bi-github icon-size"></i>
+                    </a>
+                </div>
+                <div class="col-auto mx-1 my-1">
+                    <a href="https://vimeo.com/nicholasleezt" class="link-light" aria-label="Vimeo">
+                        <i class="bi bi-vimeo icon-size"></i>
+                    </a>
+                </div>
+                <div class="col-auto mx-1 my-1">
+                    <a href="https://flickr.com/nicholasleezt" class="link-light" aria-label="Flickr">
+                        <i class="bi bi-camera icon-size"></i>
+                    </a>
+                </div>
+                <div class="col-auto mx-1 my-1">
+                    <a href="schedule.html" class="link-light" aria-label="Schedule">
+                        <i class="bi bi-train-front icon-size"></i>
+                    </a>
+                </div>
+            </div>
         </div>
     </div>
 
