--- a/schedule.html
+++ b/schedule.html
@@ -22,25 +22,27 @@
 
 <body>
 
-    <div class="d-flex flex-column min-vh-100 justify-content-center align-items-center text-white dark-mode">
-       
-            <p class="display-2 mb-3 fw-normal">Schedule</p>
-            <a id="getSchedulePCKL" class="btn btn-primary mb-3" data-bs-toggle="collapse" href="#collapsePCKL" role="button"
-                aria-expanded="false" aria-controls="collapsePCKL">
-                PC - KL
-            </a>
-            <div class="collapse" id="collapsePCKL">
-                <div id="trainInfoPCKL" class="card card-body bg-transparent">
-                </div>
+    <div class="d-flex flex-column vh-100 vw-100 justify-content-center align-items-center text-white dark-mode">
+
+        <p class="display-2 mb-3 fw-normal">Schedule</p>
+        <a id="getSchedulePCKL" class="btn btn-outline-primary mb-3" data-bs-toggle="collapse" href="#collapsePCKL"
+            role="button" aria-expanded="false" aria-controls="collapsePCKL">
+            PC - KL
+        </a>
+        <div class="collapse" id="collapsePCKL">
+            <div id="trainInfoPCKL" class="card card-body bg-transparent text-center">
             </div>
-            <a id="getScheduleKLPC" class="btn btn-primary" data-bs-toggle="collapse" href="#collapseKLPC" role="button"
-                aria-expanded="false" aria-controls="collapseKLPC">
-                KL - PC
-            </a>
-            <div class="collapse" id="collapseKLPC">
-                <div id="trainInfoKLPC" class="card card-body bg-transparent">
-                </div>
+        </div>
+        <a id="getScheduleKLPC" class="btn btn-outline-primary mb-3" data-bs-toggle="collapse" href="#collapseKLPC"
+            role="button" aria-expanded="false" aria-controls="collapseKLPC">
+            KL - PC
+        </a>
+        <div class="collapse" id="collapseKLPC">
+            <div id="trainInfoKLPC" class="card card-body bg-transparent text-center">
             </div>
+        </div>
+
+        <a class="btn btn-outline-light" href="index.html">Back</a>
 
     </div>
 
