Updated index and schedule

--- a/index.html
+++ b/index.html
@@ -49,17 +49,12 @@
                     </a>
                 </div>
                 <div class="col-auto mx-1 my-1">
-                    <a href="https://vimeo.com/nicholasleezt" class="link-light" aria-label="Vimeo">
-                        <i class="bi bi-vimeo icon-size"></i>
-                    </a>
-                </div>
-                <div class="col-auto mx-1 my-1">
                     <a href="https://flickr.com/nicholasleezt" class="link-light" aria-label="Flickr">
                         <i class="bi bi-camera icon-size"></i>
                     </a>
                 </div>
                 <div class="col-auto mx-1 my-1">
-                    <a href="schedule.html" class="link-light" aria-label="Schedule">
+                    <a href="schedule" class="link-light" aria-label="Schedule">
                         <i class="bi bi-train-front icon-size"></i>
                     </a>
                 </div>
