--- a/schedule.html
+++ b/schedule.html
@@ -42,7 +42,7 @@
             </div>
         </div>
 
-        <a class="btn btn-outline-light" href="index.html">NL</a>
+        <a class="btn btn-outline-light" href="./">NL</a>
 
     </div>
 
